// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identify Transformer Tests should add UI elements for identifier and rememberMe inputs when no features are provided 1`] = `
{
  "data": {
    "identifier": "testUserFromCookie",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "rememberMe",
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Identify Transformer Tests should add UI elements for identifier, passcode & rememberMe with username default option when username is provided in options 1`] = `
{
  "data": {
    "identifier": "testUser",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "rememberMe",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.primaryauth.submit",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Identify Transformer Tests should add UI elements for identifier, passcode & rememberMe with username default option when username is provided in remediation (inputMeta) 1`] = `
{
  "data": {
    "identifier": "mockUser",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
            "value": "mockUser",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "rememberMe",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.primaryauth.submit",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Identify Transformer Tests should add UI elements for identifier, passcode & rememberMe with username pulled from cookie as the default option when username is not provided in options but feature rememberMe is provided 1`] = `
{
  "data": {
    "identifier": "testUserFromCookie",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "rememberMe",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.primaryauth.submit",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Identify Transformer Tests should add UI elements for identifier, passcode and rememberMe inputs when no features are provided 1`] = `
{
  "data": {
    "identifier": "testUserFromCookie",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "rememberMe",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.primaryauth.submit",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Identify Transformer Tests should remove rememberMe element from formBag when showKeepMeSignedIn feature is set to false 1`] = `
{
  "data": {
    "identifier": "testUserFromCookie",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "primaryauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.primaryauth.submit",
        "options": {
          "step": "identify",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
